--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-image: url(assets/bg-image.jpg);
+    background-color: #573824;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -21,7 +21,7 @@ body {
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin: 48px auto 28px;
 }
 
 section + section {
@@ -58,4 +58,14 @@ h1, h2 {
 
 ul {
     padding-left: 25px; 
+}
+
+footer {
+    color: #F0E8C2;
+    text-align: center;
+    padding-bottom: 48px;
+}
+footer img {
+    width: 15px;
+    vertical-align: middle;
 }
